# ai-pdf-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  test_chat.py  test_embedding.py  test_ingestion.py  test_pdf.py  test_qdrant.py  test_search.py  test_stream.py
app/: main.py
app/api/: upload.py
app/core/: config.py  constants.py  logger.py
app/services/: chunker.py  database_service.py  document_service.py  embedding_service.py  ingestion_service.py  llm_service.py  pdf_loader.py  search_service.py  vector_service.py
frontend/: chat_page.py  sidebar.py  streamlit_app.py  upload_page.py
