[project]
name = "my-rag-app"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "openai",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "qdrant-client",
    "llama-index-core",
    "llama-index-readers-file",
    "tiktoken",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.6.0",
    "torch>=2.10.0",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "ollama>=0.6.2",
]
